# ML_Final_Obesidad

./: Readme.md  pyproject.toml
Cuadernos/: Proyecto_final.ipynb
