[tool.poetry]
name = "obesidad-final"
version = "0.1.0"
description = "Estimación de Niveles de obesidad basado en hábitos alimenticios y condición física."
authors = ["j-torresc <jason22787@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
seaborn = "^0.13.2"
numba = "^0.60.0"
shap = "^0.46.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
